--- a/src/CalculationFields/Template_CalculateWithIndependantList.ng.html
+++ b/src/CalculationFields/Template_CalculateWithIndependantList.ng.html
@@ -66,20 +66,30 @@
 <div ng-if="op.engine.ResultObjectType.scriptName" class="row bootstrap-iso">
 	<div class="row-cell row-cell-label">{{$root.i18n('label_result_create_new')}} : </div>
 	<div class="row-cell row-cell-value">
-		<input ng-model="op.engine.CreateNewItem" type="checkbox">
+		<input ng-model="op.engine.CreateNewItem" type="checkbox" ng-change="resetPropertyIdentifier()">
 	</div>
 </div>
 
 <div ng-if="op.engine.ResultObjectType.scriptName && !op.engine.CreateNewItem" class="row bootstrap-iso">
 	<div class="row-cell row-cell-label">{{$root.i18n('label_result_pt_identifier')}} : </div>
-	<div class="row-cell row-cell-value">
-		<select ng-model="op.engine.ResultObjectType.IdentifierProperty" ng-options="p as p.name for p in op.engine.ResultObjectType.propertiesArray | orderBy:'name'"></select>
-	</div>
-</div>
-
-<div ng-if="op.engine.ResultObjectType.scriptName && !op.engine.CreateNewItem" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_result_pt_idenfier_value')}} : </div>
-	<div class="row-cell row-cell-value">
-		<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue">
+	<div class="row-cell row-cell-value row-cell-max-width">
+		<div class="cell-content-wrapper filter-wrapper">
+			<div class="filter-row filter-header">
+				<div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</div>
+				<div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
+			</div>
+			<div class="identifier-row identifier-content">
+				<div class="filter-property-scriptname filter-cell">
+					<select ng-model="op.engine.ResultObjectType.IdentifierProperty" ng-options="p as p.name for p in op.engine.ResultObjectType.propertiesArray | orderBy:'name'"></select>
+				</div>
+				<div class="filter-value filter-cell">
+					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='text'">
+					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="checkbox" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='checkbox'">
+					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="date" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='date'">
+					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="number" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='number'">
+					<select ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.ResultObjectType.properties[f.ScriptName].lookups"></select>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
