--- a/angularHTMLayout/CalculationFields/Template_CalculateWithList.ng.html
+++ b/angularHTMLayout/CalculationFields/Template_CalculateWithList.ng.html
@@ -65,19 +65,19 @@
 				<div class="filter-cell header-cell header-operator">{{$root.i18n('label_pt_filter_column_operator')}}</div>
 				<div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
 			</div>
-			<div class="filter-row filter-content" ng-repeat="f in op.engine.Node.ChildNode.Filters">
+			<div class="filter-row filter-content" ng-repeat="fc in op.engine.Node.ChildNode.Filters">
 				<div class="filter-property-scriptname filter-cell">
-					<select ng-model="f.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.ChildNode.TargetObjectType.propertiesArray | orderBy:'name'" ng-change="resetFilter(f)"></select>
+					<select ng-model="fc.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.ChildNode.TargetObjectType.propertiesArray | orderBy:'name'" ng-change="resetFilter(fc)"></select>
 				</div>
 				<div class="filter-operator filter-cell">
-					<select ng-model="f.Operator" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, f.ScriptName) !== ''" ng-options="x for x in FilterOperators"></select>
+					<select ng-model="fc.Operator" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName) !== ''" ng-options="x for x in FilterOperators"></select>
 				</div>
 				<div class="filter-value filter-cell">
-					<input ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, f.ScriptName)==='text'">
-					<input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, f.ScriptName)==='checkbox'">
-					<input ng-model="f.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, f.ScriptName)==='date'">
-					<input ng-model="f.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, f.ScriptName)==='number'">
-					<select ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, f.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.Node.ChildNode.TargetObjectType.properties[f.ScriptName].lookups"></select>
+					<input ng-model="fc.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='text'">
+					<input ng-model="fc.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='checkbox'">
+					<input ng-model="fc.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='date'">
+					<input ng-model="fc.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='number'">
+					<select ng-model="fc.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.Node.ChildNode.TargetObjectType.properties[fc.ScriptName].lookups"></select>
 				</div>
 				<div class="remove-filter-button filter-cell"><a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.ChildNode.Filters)"><i class="fa fa-times" aria-hidden="true"></i></a></div>
 			</div>
