--- a/angularHTMLayout/CalculationFields/Template_CalculateWithIndependantList.ng.html
+++ b/angularHTMLayout/CalculationFields/Template_CalculateWithIndependantList.ng.html
@@ -93,3 +93,36 @@
 		</div>
 	</div>
 </div>
+
+<div ng-if="op.engine.ResultObjectType.scriptName && op.engine.CreateNewItem" class="row bootstrap-iso">
+	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_new_values')}} : </div>
+	<div class="row-cell row-cell-value row-cell-max-width">
+		<div class="cell-content-wrapper filter-wrapper">
+			<div class="filter-row filter-header">
+				<div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</div>
+				<div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
+			</div>
+			<div class="filter-row filter-content" ng-repeat="v in op.engine.NewValues">
+				<div class="filter-property-scriptname filter-cell">
+					<select ng-model="v.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.ResultObjectType.propertiesArray | orderBy:'name'"
+					 ng-change="resetFilter(v)"></select>
+				</div>
+				<div class="filter-value filter-cell">
+					<input ng-model="v.Value" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='text'">
+					<input ng-model="v.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='checkbox'">
+					<input ng-model="v.Value" type="date" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='date'">
+					<input ng-model="v.Value" type="number" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='number'">
+					<select ng-model="v.Value" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.ResultObjectType.properties[v.ScriptName].lookups"></select>
+				</div>
+				<div class="remove-filter-button filter-cell">
+					<a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.NewValues)">
+						<i class="fa fa-times" aria-hidden="true"></i>
+					</a>
+				</div>
+			</div>
+			<div class="add-filter-button">
+				<a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.NewValues)">{{$root.i18n('label_pt_values_add_new')}}</a>
+			</div>
+		</div>
+	</div>
+</div>
