--- a/angularHTMLayout/CalculationFields/Template_CalculateWithList.ng.html
+++ b/angularHTMLayout/CalculationFields/Template_CalculateWithList.ng.html
@@ -23,7 +23,8 @@
 			</div>
 			<div class="filter-row filter-content" ng-repeat="f in op.engine.Node.Filters">
 				<div class="filter-property-scriptname filter-cell">
-					<select ng-model="f.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'" ng-change="resetFilter(f)"></select>
+					<select ng-model="f.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'"
+					 ng-change="resetFilter(f)"></select>
 				</div>
 				<div class="filter-operator filter-cell">
 					<select ng-model="f.Operator" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName) !== ''" ng-options="x for x in FilterOperators"></select>
@@ -35,9 +36,15 @@
 					<input ng-model="f.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='number'">
 					<select ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"></select>
 				</div>
-				<div class="remove-filter-button filter-cell"><a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.Filters)"><i class="fa fa-times" aria-hidden="true"></i></a></div>
+				<div class="remove-filter-button filter-cell">
+					<a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.Filters)">
+						<i class="fa fa-times" aria-hidden="true"></i>
+					</a>
+				</div>
 			</div>
-			<div class="add-filter-button"><a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a></div>
+			<div class="add-filter-button">
+				<a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a>
+			</div>
 		</div>
 	</div>
 </div>
@@ -52,7 +59,8 @@
 <div ng-if="op.engine.Node.SelectedObjectType.scriptName" class="row bootstrap-iso">
 	<div class="row-cell row-cell-label">{{$root.i18n('label_associationtype')}} : </div>
 	<div class="row-cell row-cell-value">
-		<select ng-model="op.engine.Node.ChildNode.SelectedAssociationType" ng-options="x as x.DisplayName for x in op.engine.Node.SelectedObjectType.AssociationTypes | orderBy:'DisplayName'" ng-change="setTargetObjectType()"></select>
+		<select ng-model="op.engine.Node.ChildNode.SelectedAssociationType" ng-options="x as x.DisplayName for x in op.engine.Node.SelectedObjectType.AssociationTypes | orderBy:'DisplayName'"
+		 ng-change="setTargetObjectType()"></select>
 	</div>
 </div>
 
@@ -67,40 +75,51 @@
 			</div>
 			<div class="filter-row filter-content" ng-repeat="fc in op.engine.Node.ChildNode.Filters">
 				<div class="filter-property-scriptname filter-cell">
-					<select ng-model="fc.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.ChildNode.TargetObjectType.propertiesArray | orderBy:'name'" ng-change="resetFilter(fc)"></select>
+					<select ng-model="fc.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.ChildNode.TargetObjectType.propertiesArray | orderBy:'name'"
+					 ng-change="resetFilter(fc)"></select>
 				</div>
 				<div class="filter-operator filter-cell">
-					<select ng-model="fc.Operator" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName) !== ''" ng-options="x for x in FilterOperators"></select>
+					<select ng-model="fc.Operator" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName) !== ''"
+					 ng-options="x for x in FilterOperators"></select>
 				</div>
 				<div class="filter-value filter-cell">
 					<input ng-model="fc.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='text'">
 					<input ng-model="fc.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='checkbox'">
 					<input ng-model="fc.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='date'">
 					<input ng-model="fc.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='number'">
-					<select ng-model="fc.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.Node.ChildNode.TargetObjectType.properties[fc.ScriptName].lookups"></select>
+					<select ng-model="fc.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='lookup'"
+					 ng-options="x.id as x.name for x in op.engine.Node.ChildNode.TargetObjectType.properties[fc.ScriptName].lookups"></select>
 				</div>
-				<div class="remove-filter-button filter-cell"><a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.ChildNode.Filters)"><i class="fa fa-times" aria-hidden="true"></i></a></div>
+				<div class="remove-filter-button filter-cell">
+					<a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.ChildNode.Filters)">
+						<i class="fa fa-times" aria-hidden="true"></i>
+					</a>
+				</div>
 			</div>
-			<div class="add-filter-button"><a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.ChildNode.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a></div>
+			<div class="add-filter-button">
+				<a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.ChildNode.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a>
+			</div>
 		</div>
 	</div>
 </div>
 
-<div ng-if="op.engine.Node.ChildNode.TargetObjectType.scriptName" class="row bootstrap-iso">
+<div ng-if="op.engine.Node.ChildNode.TargetObjectType.scriptName && op.engine.Operator !== 'count'" class="row bootstrap-iso">
 	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_operand_intersection')}} : </div>
 	<div class="row-cell row-cell-value">
 		<input type="checkbox" ng-model="op.engine.OperandOnIntersection">{{p.name}}
 	</div>
 </div>
 
-<div ng-if="op.engine.Node.ChildNode.TargetObjectType.scriptName && !op.engine.OperandOnIntersection" class="row bootstrap-iso">
+<div ng-if="op.engine.Node.ChildNode.TargetObjectType.scriptName && !op.engine.OperandOnIntersection && op.engine.Operator !== 'count'"
+ class="row bootstrap-iso">
 	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_operand')}} : </div>
 	<div class="row-cell row-cell-value">
 		<select ng-model="op.engine.Node.ChildNode.TargetObjectType.Operand" ng-options="p as p.name for p in op.engine.Node.ChildNode.TargetObjectType.propertiesArray | orderBy:'name'"></select>
 	</div>
 </div>
 
-<div ng-if="op.engine.Node.ChildNode.TargetObjectType.scriptName && op.engine.OperandOnIntersection" class="row bootstrap-iso">
+<div ng-if="op.engine.Node.ChildNode.TargetObjectType.scriptName && op.engine.OperandOnIntersection && op.engine.Operator !== 'count'"
+ class="row bootstrap-iso">
 	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_operand_scriptname')}} : </div>
 	<div class="row-cell row-cell-value">
 		<input type="" ng-model="op.engine.Node.ChildNode.IntersectionNode.ObjectType.OperandPropertyScriptName">
