--- a/angularHTMLayout/CalculationFields/Template_CalculateOnSelf.ng.html
+++ b/angularHTMLayout/CalculationFields/Template_CalculateOnSelf.ng.html
@@ -24,7 +24,7 @@
 	<div class="row-cell row-cell-value property-list-checkbox row-cell-max-width">
 		<div class="cell-content-wrapper properties-wrapper">
 			<div ng-repeat="p in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'">
-			  <input type="checkbox" ng-model="p.isOperand">{{p.name}}
+			  <input type="checkbox" ng-model="p.isOperand" ng-click="setSelectedPropertyOrder($event, op.engine.Node.SelectedObjectType.propertiesArray, p)">{{p.name}} <span ng-if="p.isOperand && op.engine.Operator=='sub'">(order : {{p.operandOrder}})</span>
 			</div>
 		</div>
 	</div>
