--- a/angularHTMLayout/CalculationFields/Template_CalculateWithIndependantList.ng.html
+++ b/angularHTMLayout/CalculationFields/Template_CalculateWithIndependantList.ng.html
@@ -12,7 +12,7 @@
 	</div>
 </div>
 
-<div ng-if="op.engine.Node.SelectedObjectType.scriptName && op.engine.Operator !== 'count'" class="row bootstrap-iso">
+<div ng-if="op.engine.Node.SelectedObjectType.scriptName" class="row bootstrap-iso">
 	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_operand')}} : </div>
 	<div class="row-cell row-cell-value">
 		<select ng-model="op.engine.Node.SelectedObjectType.Operand" ng-options="p as p.name for p in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'"></select>
@@ -30,8 +30,7 @@
 			</div>
 			<div class="filter-row filter-content" ng-repeat="f in op.engine.Node.Filters">
 				<div class="filter-property-scriptname filter-cell">
-					<select ng-model="f.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'"
-					 ng-change="resetFilter(f)"></select>
+					<select ng-model="f.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.Node.SelectedObjectType.propertiesArray | orderBy:'name'" ng-change="resetFilter(f)"></select>
 				</div>
 				<div class="filter-operator filter-cell">
 					<select ng-model="f.Operator" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName) !== ''" ng-options="x for x in FilterOperators"></select>
@@ -43,15 +42,9 @@
 					<input ng-model="f.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='number'">
 					<select ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"></select>
 				</div>
-				<div class="remove-filter-button filter-cell">
-					<a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.Filters)">
-						<i class="fa fa-times" aria-hidden="true"></i>
-					</a>
-				</div>
+				<div class="remove-filter-button filter-cell"><a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.Filters)"><i class="fa fa-times" aria-hidden="true"></i></a></div>
 			</div>
-			<div class="add-filter-button">
-				<a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a>
-			</div>
+			<div class="add-filter-button"><a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.Node.Filters)">{{$root.i18n('label_pt_filter_add_new')}}</a></div>
 		</div>
 	</div>
 </div>
@@ -94,70 +87,8 @@
 					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="checkbox" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='checkbox'">
 					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="date" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='date'">
 					<input ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" type="number" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='number'">
-					<select ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='lookup'"
-					 ng-options="x.id as x.name for x in op.engine.ResultObjectType.properties[f.ScriptName].lookups"></select>
+					<select ng-model="op.engine.ResultObjectType.IdentifierPropertyValue" ng-if="getPropertyDataType(op.engine.ResultObjectType, op.engine.ResultObjectType.IdentifierProperty.scriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.ResultObjectType.properties[f.ScriptName].lookups"></select>
 				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div ng-if="op.engine.ResultObjectType.scriptName && op.engine.CreateNewItem" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_new_values')}} : </div>
-	<div class="row-cell row-cell-value row-cell-max-width">
-		<div class="cell-content-wrapper filter-wrapper">
-			<div class="filter-row filter-header">
-				<div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</div>
-				<div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</div>
-			</div>
-			<div class="filter-row filter-content" ng-repeat="v in op.engine.NewValues">
-				<div class="filter-property-scriptname filter-cell">
-					<select ng-model="v.ScriptName" ng-options="x.scriptName as x.name for x in op.engine.ResultObjectType.propertiesArray | orderBy:'name'"
-					 ng-change="resetFilter(v)"></select>
-				</div>
-				<div class="filter-value filter-cell">
-					<input ng-model="v.Value" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='text'">
-					<input ng-model="v.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='checkbox'">
-					<input ng-model="v.Value" type="date" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='date'">
-					<input ng-model="v.Value" type="number" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='number'">
-					<select ng-model="v.Value" ng-if="getPropertyDataType(op.engine.ResultObjectType, v.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.ResultObjectType.properties[v.ScriptName].lookups"></select>
-				</div>
-				<div class="remove-filter-button filter-cell">
-					<a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.NewValues)">
-						<i class="fa fa-times" aria-hidden="true"></i>
-					</a>
-				</div>
-			</div>
-			<div class="add-filter-button">
-				<a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.NewValues)">{{$root.i18n('label_pt_values_add_new')}}</a>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div ng-if="op.engine.ResultObjectType.scriptName && op.engine.CreateNewItem" class="row bootstrap-iso">
-	<div class="row-cell row-cell-label">{{$root.i18n('label_pt_new_associations')}} : </div>
-	<div class="row-cell row-cell-value row-cell-max-width">
-		<div class="cell-content-wrapper filter-wrapper">
-			<div class="filter-row filter-header">
-				<div class="filter-cell header-cell header-property">{{$root.i18n('label_pt_new_association_scriptname')}}</div>
-				<div class="filter-cell header-cell header-value">{{$root.i18n('label_pt_new_association_target_id')}}</div>
-			</div>
-			<div class="filter-row filter-content" ng-repeat="asso in op.engine.NewAssociations">
-				<div class="filter-property-scriptname filter-cell">
-					<input ng-model="asso.ScriptName">
-				</div>
-				<div class="filter-value filter-cell">
-					<input ng-model="asso.Value" type="number">
-				</div>
-				<div class="remove-filter-button filter-cell">
-					<a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.NewAssociations)">
-						<i class="fa fa-times" aria-hidden="true"></i>
-					</a>
-				</div>
-			</div>
-			<div class="add-filter-button">
-				<a class="btn-add-filter btn page-action" ng-click="addFilter($event, op.engine.NewAssociations)">{{$root.i18n('label_pt_values_add_new')}}</a>
 			</div>
 		</div>
 	</div>
