--- a/angularHTMLayout/CalculationFields/Template_CalculateWithList.ng.html
+++ b/angularHTMLayout/CalculationFields/Template_CalculateWithList.ng.html
@@ -33,7 +33,8 @@
 					<input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='checkbox'">
 					<input ng-model="f.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='date'">
 					<input ng-model="f.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='number'">
-					<select ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"></select>
+					<select ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup' && f.Operator != 'In'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"></select>
+					<select style="height:initial" multiple size="{{op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups.length}}" ng-model="f.Value" ng-if="getPropertyDataType(op.engine.Node.SelectedObjectType, f.ScriptName)==='lookup' && f.Operator == 'In'" ng-options="x.id as x.name for x in op.engine.Node.SelectedObjectType.properties[f.ScriptName].lookups"></select>
 				</div>
 				<div class="remove-filter-button filter-cell"><a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.Filters)"><i class="fa fa-times" aria-hidden="true"></i></a></div>
 			</div>
@@ -77,7 +78,8 @@
 					<input ng-model="fc.Value" type="checkbox" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='checkbox'">
 					<input ng-model="fc.Value" type="date" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='date'">
 					<input ng-model="fc.Value" type="number" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='number'">
-					<select ng-model="fc.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='lookup'" ng-options="x.id as x.name for x in op.engine.Node.ChildNode.TargetObjectType.properties[fc.ScriptName].lookups"></select>
+					<select ng-model="fc.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='lookup' && fc.Operator != 'In'" ng-options="x.id as x.name for x in op.engine.Node.ChildNode.TargetObjectType.properties[fc.ScriptName].lookups"></select>
+					<select style="height:initial" multiple size="{{op.engine.Node.ChildNode.TargetObjectType.properties[fc.ScriptName].lookups.length}}" ng-model="fc.Value" ng-if="getPropertyDataType(op.engine.Node.ChildNode.TargetObjectType, fc.ScriptName)==='lookup' && fc.Operator == 'In'" ng-options="x.id as x.name for x in op.engine.Node.ChildNode.TargetObjectType.properties[fc.ScriptName].lookups"></select>
 				</div>
 				<div class="remove-filter-button filter-cell"><a class="btn no-text page-action btn-remove-filter" ng-click="removeFilter($event, $index, op.engine.Node.ChildNode.Filters)"><i class="fa fa-times" aria-hidden="true"></i></a></div>
 			</div>
